--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ControlDeProcesosAdministrativos">
-        <activity android:name=".CicloInsertarActivity"></activity>
+        <activity android:name=".Login"></activity>
+        <activity android:name=".CicloInsertarActivity" />
         <activity android:name=".MateriaInsertarActivity" />
         <activity android:name=".ReservacionInsertarActivity" />
         <activity android:name=".RevisionInsertarActivity" />
